--- a/app/views/gruppettos/new.html.erb
+++ b/app/views/gruppettos/new.html.erb
@@ -13,7 +13,23 @@
                   collection: Gruppetto::event_types.keys.map{ |d| d.capitalize }%>
       <%= f.input :participation_rule,
                   collection: Gruppetto::participation_rules.keys.map{ |d| d.capitalize }%>
-      <input type="hidden" name="track_id" value="<%= @tracks.first.id %>">
+
+      <%# Existing vs new route %>
+      <div class='mb-3'>
+        <p>Use...</p>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="new">
+            <label class="form-check-label" for="inlineRadio1">existing route</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="existing">
+            <label class="form-check-label" for="inlineRadio2">new route</label>
+          </div>
+        <%# Render form for track new, but hidden - visibility via stimulus %>
+        <%= render 'tracks/fields', { track: @track, hidden: true } %>
+        <%# Render form for track select, but hidden - visibility via stimulus %>
+        <%= render 'tracks/selection', {tracks: @tracks, hidden: true} %>
+      </div>
       <div class="d-flex">
         <%= f.submit 'Save and publish', class: "btn btn-primary"%>
         <%= f.submit 'Save as draft not-implemented', class: "ms-3 btn btn-outline-primary"%>
