--- a/app/views/tracks/_new.html.erb
+++ b/app/views/tracks/_new.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= hidden ? 'visually-hidden' : '' %>">
+<div class="<%= hidden ? 'd-none' : '' %>">
   <%= simple_form_for(track) do |f| %>
       <%= f.input :name %>
       <%= f.input :address %>
