--- a/app/views/tracks/_selection.html.erb
+++ b/app/views/tracks/_selection.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= hidden ? 'visually-hidden' : '' %>">
+<div class="<%= hidden ? 'd-none' : '' %>" data-gr-form-track-target="selector">
   <select class="form-select" aria-label="" name='track[id]'>
     <option value=""></option>
     <% tracks.each do |track| %>
