--- a/app/views/gruppettos/new.html.erb
+++ b/app/views/gruppettos/new.html.erb
@@ -14,31 +14,7 @@
                   collection: Gruppetto::participation_rules.keys.map{ |d| d.capitalize }%>
 
       <%# Existing vs new route %>
-      <div class='mb-3' data-controller='gr-form-track' id='route-creation'>
-        <p>Use...</p>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input"
-                    type="radio"
-                    name="track_option"
-                    id="new-route"
-                    value="existing"
-                    data-action='click->gr-form-track#select'>
-            <label class="form-check-label" for="inlineRadio1">existing route</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input"
-                    type="radio"
-                    name="track_option"
-                    id="existing-route"
-                    value="new"
-                    data-action='click->gr-form-track#new'>
-            <label class="form-check-label" for="inlineRadio2">new route</label>
-          </div>
-        <%# Render form for track new, but hidden - visibility via stimulus %>
-        <%= render 'tracks/fields', { track: @track, hidden: true } %>
-        <%# Render form for track select, but hidden - visibility via stimulus %>
-        <%= render 'tracks/selection', {tracks: @tracks, hidden: true} %>
-      </div>
+      <%= render 'tracks/gruppetto_tracks', {tracks: @tracks, track: @track, f: f} %>
       <div class="d-flex">
         <%= f.submit 'Save and publish', class: "btn btn-primary"%>
         <%= f.submit 'Save as draft not-implemented', class: "ms-3 btn btn-outline-primary"%>
