Auto complete for address in tracks-form

--- a/app/views/tracks/_selection.html.erb
+++ b/app/views/tracks/_selection.html.erb
@@ -1,5 +1,5 @@
 <div class="<%= hidden ? 'd-none' : '' %>" data-gr-form-track-target="selector">
-  <select class="form-select" aria-label="" name='track[id]'>
+  <select class="form-select" aria-label="" name='gruppetto[track][id]'>
     <option value=""></option>
     <% tracks.each do |track| %>
       <option value="<%= track.id %>"><%= track.name %></option>
