--- a/app/views/tracks/_fields.html.erb
+++ b/app/views/tracks/_fields.html.erb
@@ -4,5 +4,6 @@
           <%= tracks_form.input :address %>
           <%= tracks_form.input :total_km %>
           <%= tracks_form.input :total_vm %>
+          <%= f.input :track_file, as: :file %>
         <% end %>
 </div>
