--- a/app/views/gruppettos/show.html.erb
+++ b/app/views/gruppettos/show.html.erb
@@ -64,3 +64,45 @@
             <%= render "participations/delete", { gruppetto: @gruppetto, participant: @participant } %>
     <% end %>
 </div>
+
+
+<% if current_user == @gruppetto.user %>
+  <div>
+    <p>-----------------------------------</p>
+    <p>OWNER VIEW</p>
+    <p>Attendees</p>
+    <ul class="list-group">
+      <% @gruppetto.participations.each do |participant| %>
+        <li class="list-group-item">
+          <%= participant.user.first_name %> <% participant.user.last_name %>
+          <%= render "participations/status",  participation_status: participant.participation_status %>
+          <%# <%= link_to "Update Status", edit_gruppetto_participation_path %>
+          <%# <%= render "participations/edit", { participant: participant, participation_status: participant.participation_status } %>
+          <%# <%= select_tag :participation_status, options_for_select(Participation.participation_statuses) %>
+
+          <%= turbo_frame_tag dom_id(participant) do %>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <%= participant.participation_status %>
+              </button>
+              <ul class="dropdown-menu">
+                <% Participation.participation_statuses.keys.each do |status| %>
+                  <li>
+
+                    <%= link_to status,
+                                gruppetto_participation_path(@gruppetto, participant, participant: {user_id: participant.user_id, participation_status: status}),
+                                class: 'dropdown-item',
+                                data: {
+                                  user_id: 1,
+                                  turbo_method: :patch
+                                } %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+      <% end %>
+    </ul>
+  </div>
+<% end %>
