--- a/app/views/participations/_status.html.erb
+++ b/app/views/participations/_status.html.erb
@@ -1,9 +1,9 @@
 <% case participation_status %>
   <% when "pending" %>
     <span class="badge bg-info">Pending</span>
-  <% when "unconfirmed" %>
-    <span class="badge bg-secondary">Accepted</span>
-  <% when "confirmed" %>
+  <% when "attending" %>
+    <span class="badge bg-secondary">Attending</span>
+  <% when "rejected" %>
     <span class="badge bg-danger">Rejected</span>
   <% else %>
     Unknown status
