now auto attends for the user that creates the gruppetto

--- a/app/views/participations/_status.html.erb
+++ b/app/views/participations/_status.html.erb
@@ -1,9 +1,9 @@
 <% case participation_status %>
-  <% when "pending" %>
+  <% when "Pending" %>
     <span class="badge bg-info">Pending</span>
-  <% when "attending" %>
+  <% when "Attending" %>
     <span class="badge bg-secondary">Attending</span>
-  <% when "rejected" %>
+  <% when "Rejected" %>
     <span class="badge bg-danger">Rejected</span>
   <% else %>
     Unknown status
