--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -7,19 +7,22 @@
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
-  <ul class="nav nav-tabs nav-fill d-flex justify-content-around bd-highlight" style="width:100%; background:white;" role="tablist">
+  <ul class="nav nav-tabs nav-fill d-flex justify-content-around bd-highlight start-10" style="width:100%; background:white;" role="tablist">
     <li class="nav-item">
       <a class="nav-link active bg-primary bg-gradient text-white" data-toggle="tab" href="#tasks" role="tab" aria-controls="tasks" aria-selected="true">Upcoming</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#files" role="tab" aria-controls="files" aria-selected="false">Going</a>
+    <li class="nav-item bg-hover-primary-10">
+      <a class="nav-link bg-hover-primary-10" data-toggle="tab" href="#files" role="tab" aria-controls="files" aria-selected="false">Going</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#activity" role="tab" aria-controls="activity" aria-selected="false">Past</a>
+    <li class="nav-item bg-hover-primary-10">
+      <a class="nav-link bg-hover-primary-10" data-toggle="tab" href="#activity" role="tab" aria-controls="activity" aria-selected="false">Past</a>
     </li>
   </ul>
 </div>
-<div class="b-example-divider"></div>
+<div class="b-example-divider "></div>
+<div class="b-example-divider "></div>
+
+<div style="width:100%; height:2vh;"></div>
 <% @gruppettos.each do | gruppetto | %>
   <%# renders the index_card.html.erb with sending the gruppetto params %>
   <%= render "index_card", gruppetto: gruppetto %>
