show page owner accepts now complete and styling updated, can now only delete participation if already pending/accepted, fixed footer to bottom of page

--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="row py-2">
     <div class="col">
-      Upcomming
+      Upcoming
     </div>
     <div class="col">
       Going
