join button only possible if not already joined, has different message and blocked out depending on if attending or requested

--- a/app/views/gruppettos/show.html.erb
+++ b/app/views/gruppettos/show.html.erb
@@ -82,7 +82,7 @@
       <%= link_to "Back to Grupettos", gruppettos_path, class: "btn btn-outline-primary w-100" %>
     </div>
     <div class="w-50">
-      <%= render "participations/new", gruppetto: @gruppetto %>
+      <%= render "participations/new", gruppetto: @gruppetto, participant: @participant %>
     </div>
   </div>
 
