--- a/app/views/participations/_new.html.erb
+++ b/app/views/participations/_new.html.erb
@@ -1,5 +1,14 @@
+<% if !@gruppetto.participant_ids.include? current_user.id %>
 <form action="<%= gruppetto_participations_path(gruppetto) %>", method="POST">
   <input type="hidden" name="gruppetto_id" value="<%= gruppetto.id %>">
   <input type="hidden" name="user_id" value="<%= current_user %>">
-  <input type="submit" name="commit" value="Join the ride!" class="btn btn-primary w-100">
+  <input type="submit" name="commit" value="Join the ride!"
+         class="btn btn-primary w-100">
 </form>
+<% else %>
+  <% if participant.participation_status == "Attending" %>
+    <button type="button" class="btn btn-primary w-100" disabled>Already attending</button>
+  <% else %>
+    <button type="button" class="btn btn-primary w-100" disabled>Requested join</button>
+  <% end %>
+<% end %>
