--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -36,12 +36,12 @@
           <table class="table table-borderless card-table mb-0">
             <tbody>
               <tr>
-                <td colspan="4"><%= gruppetto.name %></td>
+                <td colspan="4"></td>
               </tr>
               <tr>
                 <td><i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%></td>
                 <td><%= image_tag "avatar-fallback.svg", style: 'height:32px;width:32px;'  %><%= @attending_count = gruppetto.participations.count {|attending| attending.participation_status == "Attending" } %>
-                <td><i class="fa-sharp fa-solid fa-ruler"></i><%= gruppetto.track.total_km %></td>
+                <td><i class="fa-sharp fa-solid fa-ruler"></i><%= gruppetto.track.total_km %><%= params  %></td>
                 <td><i class="fa-sharp fa-solid fa-mountain"></i><%= gruppetto.track.total_vm %></td>
               </tr>
             </tbody>
