--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="container">
+    <h1>Find your next grupetto</h1>
+    <p>powered by GroupAppO</p>
+    <%= link_to "Find your gruppetto", gruppettos_path, class: "btn btn-primary" %>
+  </div>
+</div>
