--- a/app/views/tracks/_fields.html.erb
+++ b/app/views/tracks/_fields.html.erb
@@ -6,6 +6,6 @@
                           wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
           <%= tracks_form.input :total_km, placeholder: "Test" %>
           <%= tracks_form.input :total_vm %>
-          <%= f.input :track_file, as: :file %>
+          <%= tracks_form.input :file, as: :file %>
         <% end %>
 </div>
