First cool components

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,6 @@
 @import "components/banner";
 @import "components/index";
 @import "pages/index";
+
+@import "flatpickr/dist/flatpickr";
+@import "flatpickr/dist/themes/airbnb";
