seed file updated

--- a/app/views/gruppettos/show.html.erb
+++ b/app/views/gruppettos/show.html.erb
@@ -80,11 +80,11 @@
 
 </div>
   <%# TO BE THE STANDARDISED FOOTER %>
-  <div class="d-flex justify-content-between fixed-bottom bg-white p-2">
+  <%# <div class="d-flex justify-content-between fixed-bottom bg-white p-2">
     <div class="w-50">
       <%= link_to "Back to Grupettos", gruppettos_path, class: "btn btn-outline-primary w-100" %>
-    </div>
+    <%# </div>
     <div class="w-50">
       <%= render "participations/new", gruppetto: @gruppetto, participant: @participant %>
-    </div>
-  </div>
+    <%# </div> %>
+  <%# </div>  %>
