--- a/app/views/gruppettos/new.html.erb
+++ b/app/views/gruppettos/new.html.erb
@@ -25,7 +25,7 @@
         <%= f.submit 'Save and publish', class: "btn btn-primary"%>
         <%= f.submit 'Save as draft not-implemented', class: "ms-3 btn btn-outline-primary"%>
       </div>
-
+      <p>hello</p>
 
       <%= f.input :event_type,
                   label: 'Who is allowed to participate?',
