--- a/app/views/gruppettos/_show_footer.html.erb
+++ b/app/views/gruppettos/_show_footer.html.erb
@@ -1,4 +1,4 @@
-  <footer class="footer">
+  <footer class="footer sticky-bottom">
     <div class="d-flex justify-content-between bg-white p-2 mt-auto">
       <div class="w-50">
         <%= link_to "Back to Grupettos", gruppettos_path, class: "btn btn-outline-primary w-100" %>
