--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -1,34 +1,42 @@
 <%= link_to gruppetto_path(gruppetto), :action => 'go' do  %>
+
+
+
+
+
+<div class="d-flex">
+  <div class="card info-card flex-row col-12">
+  <!-- -->
+      <img class="" src="https://via.placeholder.com/128"/>
+
+      <div class="card-body">
+        <h5 class="card-title">
+          <%= gruppetto.name %>
+            <span>
+              | <i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%>
+
+
+            </span>
+        </h5>
+          <div class="d-flex align-items-center">
+            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-people"></i>
+            </div>
+            <div class="ps-3"><h6><%= image_tag "avatar-fallback.svg", style: 'height:32px;width:32px;'  %><%= gruppetto.participants.count %></h6> <span class="text-danger small pt-1 fw-bold"><i class="fa-sharp fa-solid fa-ruler"></i><%= gruppetto.track.total_km %></span> <span class="text-muted small pt-2 ps-1"><i class="fa-sharp fa-solid fa-mountain"></i><%= gruppetto.track.total_vm %></span>
+            </div>
+          </div>
+        </div>
+  <!-- -->
+  </div>
+</div>
+
+
+
+
+
+
+
 <!--
-  <div class="my-3 p-3 bg-body rounded shadow-sm">
-    <div class="row">
-      <div class="col-12">
-        <table class="table table-borderless">
-          <tbody>
-            <tr>
-              <td rowspan="3" class="text-gray-dark">
-              <img src="https://via.placeholder.com/128">
-              </td>
-              <td colspan="4" class="text-gray-dark table-info"><i class="fa-sharp fa-solid fa-dice-d8"></i> <%= gruppetto.name %></td>
-            </tr>
-            <tr>
-              <td colspan="2"><i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%></td>
-              <td colspan="2"><%= image_tag "avatar-fallback.svg", style: 'height:32px;width:32px;'  %><%= gruppetto.participants.count %></td>
-            </tr>
-            <tr>
-              <td><i class="fa-sharp fa-solid fa-ruler"></i><%= gruppetto.track.total_km %></td>
-              <td>@twitter</td>
-              <td><i class="fa-sharp fa-solid fa-mountain"></i><%= gruppetto.track.total_vm %></td>
-              <td>blue t</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>-->
-
-
-<div class="card flex-row m-3"><img class="card-img-left example-card-img-responsive" src="https://via.placeholder.com/128"/>
+<div class="card info-card flex-row m-3"><img class="card-img-left example-card-img-responsive" src="https://via.placeholder.com/128"/>
   <div class="card-body">
     <div class="row justify-content-center">
       <div class="row-auto">
@@ -36,10 +44,10 @@
           <table class="table table-borderless card-table mb-0">
             <tbody>
               <tr>
-                <td colspan="4"></td>
+                <td class="card-title"colspan="4"><%= gruppetto.name %></td>
               </tr>
               <tr>
-                <td><i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%></td>
+                <td class="text-success small pt-1 fw-bold"><i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%></td>
                 <td><%= image_tag "avatar-fallback.svg", style: 'height:32px;width:32px;'  %><%= @attending_count = gruppetto.participations.count {|attending| attending.participation_status == "Attending" } %>
                 <td><i class="fa-sharp fa-solid fa-ruler"></i><%= gruppetto.track.total_km %><%= params  %></td>
                 <td><i class="fa-sharp fa-solid fa-mountain"></i><%= gruppetto.track.total_vm %></td>
@@ -50,5 +58,5 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 <% end %>
