--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -1,31 +1,35 @@
 <%= link_to gruppetto_path(gruppetto), :action => 'go' do  %>
 
-
-
-
-
 <div class="d-flex">
-  <div class="card info-card flex-row col-12">
-  <!-- -->
-      <img class="" src="https://via.placeholder.com/128"/>
-
-      <div class="card-body">
-        <h5 class="card-title">
-          <%= gruppetto.name %>
-            <span>
-              | <i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%>
-
-
-            </span>
-        </h5>
-          <div class="d-flex align-items-center">
-            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"> <i class="bi bi-people"></i>
-            </div>
-            <div class="ps-3"><h6><%= image_tag "avatar-fallback.svg", style: 'height:32px;width:32px;'  %><%= gruppetto.participants.count %></h6> <span class="text-danger small pt-1 fw-bold"><i class="fa-sharp fa-solid fa-ruler"></i><%= gruppetto.track.total_km %></span> <span class="text-muted small pt-2 ps-1"><i class="fa-sharp fa-solid fa-mountain"></i><%= gruppetto.track.total_vm %></span>
-            </div>
-          </div>
+  <div class="card info-card flex-row col-12 my-2">
+    <img class="" src="https://via.placeholder.com/128"/>
+    <div class="card-body">
+      <h5 class="card-title">
+        <%= gruppetto.name %>
+      </h5>
+      <h5>
+        <i class="fa-solid fa-calendar"></i> <%= gruppetto.start.strftime('%d %b %l%P')%>
+      </h5>
+      <div class="d-flex align-items-center">
+        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+          <i class="bi bi-people"></i>
         </div>
-  <!-- -->
+        <div class="">
+          <h6>
+            <%= image_tag "avatar-fallback.svg", style: 'height:32px;width:32px;'  %>
+            <%= attending_count = gruppetto.participations.count {|attending| attending.participation_status == "Attending" } %> riders
+          </h6>
+          <span class="text-danger small pt-1 fw-bold">
+            <i class="fa-sharp fa-solid fa-ruler"></i>
+            <%= gruppetto.track.total_km.round(0) %> km/h
+          </span>
+          <span class="text-muted small pt-2 ps-1">
+            <i class="fa-sharp fa-solid fa-mountain"></i>
+            <%= gruppetto.track.total_vm.round(0) %> vm
+          </span>
+        </div>
+      </div>
+      </div>
   </div>
 </div>
 
