--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -34,10 +34,12 @@
     </li>
   </ul>
 </div>
-<div class="container" style="position:relative; top:0;">
+<div class="container mt-4" style="position:relative; top:0;">
 <% @gruppettos.each do | gruppetto | %>
   <%# renders the index_card.html.erb with sending the gruppetto params %>
-  <%= render "index_card", gruppetto: gruppetto %>
+  <div class="">
+    <%= render "index_card", gruppetto: gruppetto %>
+  </div>
 <% end %>
 </div>
 <div class="d-flex justify-content-between fixed-bottom bg-white p-2">
