--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,9 +17,9 @@
           <li class="nav-item active">
             <%= link_to "My gruppettos", gruppettos_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
+          <%# <li class="nav-item">
             <%= link_to "Friends", "#", class: "nav-link" %>
-          </li>
+          <%# </li> %>
           <li class="nav-item">
             <%= link_to "Routes", "#", class: "nav-link" %>
           </li>
